Fix website being horizontally scrollable on mobile (#5055)

--- a/website/src/css/general.css
+++ b/website/src/css/general.css
@@ -51,6 +51,10 @@ html body[data-theme="dark"] {
   --aa-selected-color-rgb: 80, 80, 80;
 }
 
+#__docusaurus {
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
 }
